# swiftstack-core

./: .gitignore  README.md  pyproject.toml
.github/: FUNDING.yml
swiftstack/: __init__.py  cli.py
swiftstack/core/: __init__.py  generator.py
swiftstack/templates/: TEMPLATES.md  __init__.py
